@@ -1,3 +1,8 @@
+2007-09-25  Eitan Isaacson  <eitan@ascender.com>
+
+	* macaroon/playback/wait_actions.py (WaitForWindowActivate): If
+	the active frame's name changes, check to see if it is the right frame.
+
 2007-09-19  Eitan Isaacson  <eitan@ascender.com>
 
 	* macaroon/playback/wait_actions.py (WaitAction.__str__): Fixed
